k8s/inventory-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service-deployment
  labels:
    app: inventory-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
        - name: inventory-service
          image: mlucas4330/orderflow-inventory-service:v1.0.0
