k8s/order-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: seu-usuario/orderflow-order-service:v1.0.0
          ports:
            - containerPort: 8080
