k8s/kafka-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  type: ClusterIP
  selector:
    app: kafka
  ports:
    - name: internal
      protocol: TCP
      port: 9093
      targetPort: 9093
